fix(runner): output dir property as a guard